<resources>
    <string name="app_name">eTrade Admin</string>
    <string name="v_1_0_0">V 1.0.0</string>
    <string name="copy_right">@ eTrade 2023</string>
    <string name="etrade_admin">eTrade Admin</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome_to_etrade">Welcome to eTrade</string>
    <string name="log_out">Log out</string>
    <string name="search">   Search</string>
    <string name="product_settings">Product Settings</string>
    <string name="samsung">Samsung</string>
    <string name="galaxy_s23_ultra">Galaxy S23 Ultra</string>
    <string name="description">Description</string>
    <string name="_10">10%</string>
    <string name="_10_">10</string>
    <string name="rs_250_000">Rs 250 000</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="add_product">Add Product</string>
    <string name="quatity">Quantity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="next_page">Next Page</string>
    <string name="prev_page">Prev Page</string>
    <string name="add_new_product">Add New Product</string>
    <string name="update">Update</string>
</resources>