<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AddProduct1Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/categoryMobile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="10dp"
                android:src="@drawable/baseline_smartphone_24" />

            <ImageView
                android:id="@+id/categoryComputer"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="10dp"
                android:src="@drawable/baseline_laptop_24" />

            <ImageView
                android:id="@+id/categoryAccessories"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="10dp"
                android:src="@drawable/baseline_mouse_24" />
        </LinearLayout>

        <MultiAutoCompleteTextView
            android:id="@+id/txtBrandSelecter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/brand"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <EditText
            android:id="@+id/txtModel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/model"
            android:inputType="text"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txtBrandSelecter"
            app:layout_constraintTop_toBottomOf="@+id/txtBrandSelecter" />

        <EditText
            android:id="@+id/txtDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="@+id/txtModel"
            app:layout_constraintStart_toStartOf="@+id/txtModel"
            app:layout_constraintTop_toBottomOf="@+id/txtModel" />

        <TextView
            android:id="@+id/txtNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/next_page"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>